--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>convention center</title>
     <!-- Css link -->
-    <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="style.css">
     <!-- Bootstrp link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Font awsame link  -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 <body>
     <!-- heder section start -->
@@ -77,7 +79,63 @@
     </header>
    
 <main>
+<!-- our package section  -->
+<section>
+  <h1 class="text-center py-5">Our package</h1>
+  <div class="container">
+    <div class="row">
+      <!-- Businas fair  -->
+      <div class="col-3">
+       <h2>$300<br>Business fair</h2>
+       <p class="text-secondary">For most Business event like book fair.craft fair</p>
+       <p class="text-secondary"><i class="far fa-check-circle me-2"></i>limited space access</p>
+       <p class="text-secondary"> <i class="far fa-check-circle me-2 "></i>Secuirty facility</p>
+       <p class="text-secondary"><i class="far fa-check-circle me-2"></i>evant support </p>
+       <p class="text-secondary"><i class="far fa-check-circle me-2"></i>Decoration design</p>
+       <p class="text-secondary"><i class="far fa-check-circle me-2"></i>per day bill</p>
+       <button type="button" class=" package px-5 py-2 fw-bold  rounded-pill text-primary">Choose plan</button>
+      </div>
+      <!-- Wedding Basic  -->
+      <div class="col-3">
+       <h2>$500<br>Wedding basic</h2>
+       <p class="text-secondary">For most Business event like book fair.craft fair</p>
+       <p class="text-secondary"><i class="far fa-check-circle me-2"></i>limited space access</p>
+       <p class="text-secondary"> <i class="far fa-check-circle me-2 "></i>Secuirty facility</p>
+       <p class="text-secondary"><i class="far fa-check-circle me-2"></i>evant support </p>
+       <p class="text-secondary"><i class="far fa-check-circle me-2"></i>Decoration design</p>
+       <p class="text-secondary"><i class="far fa-check-circle me-2"></i>per day bill</p>
+       <button type="button" class=" package px-5 py-2 fw-bold  rounded-pill text-primary">Choose plan</button>
+      </div>
+  <!-- Wedding pluse -->
+        <div class="col-3  bg-primary widding pt-5 pb-2  position-relative ">
+          <div class="position-absolute Hotposition px-3  py-2 mb-2 bg-danger text-white  rounded-pill "> Hot</div>
+          <h2 class="text-white">$500<br>Wedding Plus</h2>
+          <p class="text-white">For most Business event like book fair.craft fair</p>
+          <p class="text-white"><i class="far fa-check-circle me-2"></i>limited space access</p>
+          <p class="text-white"> <i class="far fa-check-circle me-2 "></i>Secuirty facility</p>
+          <p class="text-white"><i class="far fa-check-circle me-2"></i>evant support </p>
+          <p class="text-white"><i class="far fa-check-circle me-2"></i>Decoration design</p>
+          <p class="text-white"><i class="far fa-check-circle me-2"></i>per day bill</p>
+          <button type="button" class=" package px-5 py-2 fw-bold  rounded-pill text-primary">Choose plan</button>
+         </div>
+    <!-- corporatn event -->
+      <div class="col-3">
+        <h2>$1200<br>corporate event</h2>
+        <p class="text-secondary">For most Business event like book fair.craft fair</p>
+        <p class="text-secondary"><i class="far fa-check-circle me-2"></i>limited space access</p>
+        <p class="text-secondary"> <i class="far fa-check-circle me-2 "></i>Secuirty facility</p>
+        <p class="text-secondary"><i class="far fa-check-circle me-2"></i>evant support </p>
+        <p class="text-secondary"><i class="far fa-check-circle me-2"></i>Decoration design</p>
+        <p class="text-secondary"><i class="far fa-check-circle me-2"></i>per day bill</p>
+        <button type="button" class=" package px-5 py-2 fw-bold  rounded-pill text-primary">Choose plan</button>
+       </div>
+    </div>
+  </div>
+</section>
 
+<section class="">
+
+</section>
 </main>
    
    <!-- Bootstrp link  -->
