--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <section>
   <h1 class="text-center py-5">Our package</h1>
   <div class="container">
-    <div class="row">
+    <div class="row ">
       <!-- Businas fair  -->
       <div class="col-3">
        <h2>$300<br>Business fair</h2>
@@ -107,7 +107,7 @@
        <button type="button" class=" package px-5 py-2 fw-bold  rounded-pill text-primary">Choose plan</button>
       </div>
   <!-- Wedding pluse -->
-        <div class="col-3  bg-primary widding pt-5 pb-2  position-relative ">
+        <div class="col-3 bg-primary widding pt-5 pb-2  position-relative shadow p-3 mb-5 ">
           <div class="position-absolute Hotposition px-3  py-2 mb-2 bg-danger text-white  rounded-pill "> Hot</div>
           <h2 class="text-white">$500<br>Wedding Plus</h2>
           <p class="text-white">For most Business event like book fair.craft fair</p>
@@ -119,7 +119,7 @@
           <button type="button" class=" package px-5 py-2 fw-bold  rounded-pill text-primary">Choose plan</button>
          </div>
     <!-- corporatn event -->
-      <div class="col-3">
+      <div class="col-3 ">
         <h2>$1200<br>corporate event</h2>
         <p class="text-secondary">For most Business event like book fair.craft fair</p>
         <p class="text-secondary"><i class="far fa-check-circle me-2"></i>limited space access</p>
@@ -132,12 +132,86 @@
     </div>
   </div>
 </section>
-
-<section class="">
-
+<!-- Frequently Asked Questions -->
+<section class="Asked Questions">
+<h2 class="text-center py-5">Frequently Asked Questions</h2>
+<div class="container">
+  <div class="row">
+    <div class="col-7">
+      <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+           What's the differance between event design and event planning?
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+           How early do we need to start planning event
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+             What is your and cancellation police?
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+           How do you keep budgets on track?
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-5">
+ <img width= "100%"src="images/people.png" alt="">
+    </div>
+  </div>
+</div>
 </section>
 </main>
-   
+<!-- footer section -->
+   <footer>
+    <div class="py-5 text-center bg-dark text-muted">
+      <div class="row align-items-end">
+        <div class="col">
+         <p>© 2020 bike. All rights reserved</p><br>
+        </div>
+        <div class="col">
+         <h6>Gat the App</h6>
+         <a href=""><img src="images/App Store Badge.png" alt=""><br></a><br>
+         <a href=""><img src="images/Google Play Badge.png" alt=""></a>
+        </div>
+        
+      </div>
+    </div>
+   </footer>
    <!-- Bootstrp link  -->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
