--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Font awsame link  -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <!-- Googl font link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Island+Moments&family=Poppins:ital@0;1&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- heder section start -->
@@ -47,7 +51,7 @@
             <div class="carousel-caption d-none d-md-block">
               <h5 class="fs-1">Dhaka international Convention center is the largest community center in Dhaka.</h5>
               <p >is the  Country's  1st  largest luxurious Convention Center at gulshan Police Plaza in Dhaka.is the  Country's  1st  largest luxurious .</p>
-              <button type="button" class="btn btn-light text-success px-4">Book now</button>
+              <button type="button" class="btn btn-light text-success px-4"><a class="nav-link" href="https://diccbd.com/home?fbclid=IwAR2JgMHVgbW7QISqnbjT5EGrj-clg4BeK-SB1oJKlqG4De780Uyj0-KuPEs"target="_blank">More details now</a></button>
             </div>
           </div>
           <div class="carousel-item">
@@ -55,7 +59,7 @@
             <div class="carousel-caption d-none d-md-block">
                 <h5 class="fs-1">Dhaka international Convention center is the largest community center in Dhaka.</h5>
                 <p >is the  Country's  1st  largest luxurious Convention Center at gulshan Police Plaza in Dhaka.is the  Country's  1st  largest luxurious .</p>
-                <button type="button" class="btn btn-light text-success px-4">Book now</button>
+                <button type="button" class="btn btn-light text-success px-4"><a class="nav-link" href="https://diccbd.com/home?fbclid=IwAR2JgMHVgbW7QISqnbjT5EGrj-clg4BeK-SB1oJKlqG4De780Uyj0-KuPEs"target="_blank">More details now</a></button>
             </div>
           </div>
           <div class="carousel-item">
@@ -63,7 +67,7 @@
             <div class="carousel-caption d-none d-md-block">
                 <h5 class="fs-1">Dhaka international Convention center is the largest community center in Dhaka.</h5>
                 <p >is the  Country's  1st  largest luxurious Convention Center at gulshan Police Plaza in Dhaka.is the  Country's  1st  largest luxurious .</p>
-                <button type="button" class="btn btn-light px-4 text-success bold">Book now</button>
+                <button type="button" class="btn btn-light text-success px-4"><a class="nav-link" href="https://diccbd.com/home?fbclid=IwAR2JgMHVgbW7QISqnbjT5EGrj-clg4BeK-SB1oJKlqG4De780Uyj0-KuPEs"target="_blank">More details now</a></button>
             </div>
           </div>
         </div>
@@ -79,6 +83,21 @@
     </header>
    
 <main>
+  <!-- Every moment is Precious section  -->
+  <section>
+    <div class="container">
+      <div class="row mt-5 align-items-center">
+        <div class="col">
+        <img  src="images/wedding.png" alt="">
+        </div>
+        <div class="col ">
+         <h1>Every moment is Precious </h1><br>
+         <h6>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</h6><br>
+         <button type="button" class="btn btn-primary ">Explore our album <i class="fas fa-long-arrow-alt-right"></i></button>
+        </div>
+      </div>
+    </div>
+  </section>
 <!-- our package section  -->
 <section>
   <h1 class="text-center py-5">Our package</h1>
@@ -132,7 +151,7 @@
     </div>
   </div>
 </section>
-<!-- Frequently Asked Questions -->
+<!-- Frequently Asked Questions section -->
 <section class="Asked Questions">
 <h2 class="text-center py-5">Frequently Asked Questions</h2>
 <div class="container">
@@ -197,18 +216,18 @@
 </section>
 </main>
 <!-- footer section -->
-   <footer>
-    <div class="py-5 text-center bg-dark text-muted">
+   <footer class="mt-5">
+    <div class=" py-5 text-center bg-dark text-muted">
       <div class="row align-items-end">
         <div class="col">
          <p>© 2020 bike. All rights reserved</p><br>
         </div>
         <div class="col">
          <h6>Gat the App</h6>
-         <a href=""><img src="images/App Store Badge.png" alt=""><br></a><br>
-         <a href=""><img src="images/Google Play Badge.png" alt=""></a>
+         <a href="https://www.apple.com/app-store/"target="_blank"><img src="images/App Store Badge.png" alt=""><br></a><br>
+         <a href="https://play.google.com/store/apps"target="_blank"><img src="images/Google Play Badge.png" alt=""></a>
         </div>
-        
+
       </div>
     </div>
    </footer>
