happy clint section

--- a/index.html
+++ b/index.html
@@ -98,6 +98,20 @@
       </div>
     </div>
   </section>
+  <!-- photo Galary -->
+    <section class="container">
+      <div class="row">
+        <div class="col-4">
+    <img src="Galla" alt="">
+        </div>
+        <div class="col-4">
+          Column
+        </div>
+        <div class="col-4">
+          Column
+        </div>
+      </div>
+    </section>
 <!-- our package section  -->
 <section>
   <h1 class="text-center py-5">Our package</h1>
@@ -126,7 +140,7 @@
        <button type="button" class=" package px-5 py-2 fw-bold  rounded-pill text-primary">Choose plan</button>
       </div>
   <!-- Wedding pluse -->
-        <div class="col-3 bg-primary widding pt-5 pb-2  position-relative shadow p-3 mb-5 ">
+        <div class="col-3 bg-primary widding pt-5   position-relative shadow-lg p-3 mb-5">
           <div class="position-absolute Hotposition px-3  py-2 mb-2 bg-danger text-white  rounded-pill "> Hot</div>
           <h2 class="text-white">$500<br>Wedding Plus</h2>
           <p class="text-white">For most Business event like book fair.craft fair</p>
@@ -150,6 +164,47 @@
        </div>
     </div>
   </div>
+</section>
+<!-- Happy clients section   -->
+<section class="container">
+<div class="row">
+  <!-- Regina Miles -->
+  <div class="col-sm-4 text-center">
+    <div class="card shadow-lg p-3 mb-5 bg-body rounded">
+      <div class="card-body">
+        <p class="text-muted  card-text">slate helps you see how <br> many days you need <br> to work reach your finacial <br> gal for the mounth and you .</p>
+        <img src="images/person 1.png" alt="">
+        <h6>Regina Miles</h6>
+        <p>Banker</p>
+      </div>
+    </div>
+  </div>
+  <!-- joni Drake -->
+  <div class="col-sm-4 text-center">
+    <div class="card shadow-lg p-3 mb-5 bg-body rounded">
+      <div class="card-body">
+        <p class="text-muted  card-text">slate helps you see how <br> many days you need <br> to work reach your finacial <br> gal for the mounth and you .</p>
+        <img src="images/person 2.png" alt="">
+        <h6>Regina Miles</h6>
+        <p>Banker</p>
+      </div>
+    </div>
+  </div>
+  <!-- cret yater -->
+  <div class="col-sm-4 text-center">
+    <div class="card shadow-lg p-3 mb-5 bg-body rounded">
+      <div class="card-body">
+        <p class="text-muted  card-text">slate helps you see how <br> many days you need <br> to work reach your finacial <br> gal for the mounth and you .</p>
+        <img src="images/person 3.png" alt="">
+        <h6>Regina Miles</h6>
+        <p>Banker</p>
+      </div>
+    </div>
+  </div>
+  
+</div>
+
+
 </section>
 <!-- Frequently Asked Questions section -->
 <section class="Asked Questions">
