--- a/index.html
+++ b/index.html
@@ -83,14 +83,16 @@
     </header>
    
 <main>
-  <!-- Every moment is Precious section  -->
+
+
+ <!-- Every moment is Precious section  -->
   <section>
     <div class="container">
       <div class="row mt-5 align-items-center">
         <div class="col">
         <img  src="images/wedding.png" alt="">
         </div>
-        <div class="col ">
+        <div class="col">
          <h1>Every moment is Precious </h1><br>
          <h6>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</h6><br>
          <button type="button" class="btn btn-primary ">Explore our album <i class="fas fa-long-arrow-alt-right"></i></button>
@@ -98,20 +100,59 @@
       </div>
     </div>
   </section>
-  <!-- photo Galary -->
-    <section class="container">
-      <div class="row">
-        <div class="col-4">
-    <img src="Galla" alt="">
+
+  <hr>
+  <button onclick="see()" class="btn btn-warning">toast Button</button>
+  <hr>
+  <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast-header">
+      <img src="..." class="rounded me-2" alt="...">
+      <strong class="me-auto">Bootstrap</strong>
+      <small>11 mins ago</small>
+      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+    </div>
+    <div class="toast-body">
+      Hello, world! This is a toast message.
+    </div>
+  </div>
+
+
+
+  <!-- photo Galary  headding-->
+  <section class="bg-success mt-5 pt-2 text-dark bg-opacity-10 ">
+   <div class="text-center my-5">
+    <h4 class="text-success">Our Conference</h4>
+    <h1 class="text-info">See Photo Gallery</h1>
+    <p>There are many variations of passages of Lorem Ipsum available but the at majority have suffered alteration in some dummy.</p>
+   </div>
+   <!-- photo Gallary starte  -->
+    <div class="container">
+      <div class="row my-5 row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+        <div class="col-4 ">
+       <img width="300px" src="Gallary/photo-4.jpg" alt=""><br>
         </div>
-        <div class="col-4">
-          Column
+        <div class="col-4 ">
+        <img width="300px" src="Gallary/photo-5.jpeg" alt="">
         </div>
-        <div class="col-4">
-          Column
+        <div class="col-4 ">
+        <img width="300px" src="Gallary/photo-6.jpg" alt="">
         </div>
       </div>
-    </section>
+      <div class="row pb-5 row-cols-lg-3 row-cols-md-2 row-cols-sm-1 ">
+        <div class="col-4">
+        <img width="300px" src="Gallary/photo-1.jpg" alt=""><br>
+        </div>
+        <div class="col-4">
+        <img width="300px" src="Gallary/photo-2.jpg" alt="">
+        </div>
+        <div class="col-4" >
+        <img width="300px" src="Gallary/photo-3.jpg" alt="">
+
+        </div>
+        
+      </div>
+    </div>
+  </section>
 <!-- our package section  -->
 <section>
   <h1 class="text-center py-5">Our package</h1>
@@ -287,6 +328,21 @@
     </div>
    </footer>
    <!-- Bootstrp link  -->
+   <script>
+     var option={
+       animation:true,
+       delay:20000
+     }
+   var toastElList=[].slice.call(document.querySelectorAll('.toast'))
+    var toastList=toastElList.map(function (toastEl){
+      return new bootstrap.Toast(toastEl,option)
+    
+    function see(){
+      for(var i=0;i<toastList.length;i++){
+        toastList[i].show();
+      }
+    }
+    </script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
